<resources>
    <!--app-->
    <string name="app_name">Stew</string>

    <!--login-->
    <string name="login_text1">Design anything.</string>
    <string name="login_text2">Publish anywhere.</string>
    <string name="login_text3">Work or play,Stew is loved by beginners and experts,teams and individuals.</string>
    <string name="login_warning">By continuing,you agree to Stew\'s Terms of Use and Privacy Policy</string>
    <string name="login_with_qq">Continue with QQ</string>
    <string name="login_with_wx">Continue with WeiXin</string>
    <string name="login_with_email">Continue with email</string>

    <!--main fragment-->
    <string name="search_for_something">search for something ...</string>
    <!--lesson fragment-->
    <string name="your_lesson">Your Lesson</string>
    <string name="me">Me</string>
</resources>
